# crud-file-server

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
src/: config.rs  lib.rs  main.rs  serve.rs  state.rs
tests/: crud.rs
