[package]
name = "crud-file-server"
version = "0.3.0"
authors = ["Emil Rasmus Merzin <rasmusmerzin@gmail.com>"]
edition = "2018"
description = "A simple HTTP file server with POST, GET, PUT, PATCH and DELETE methods"
repository = "https://gitlab.com/rasmusmerzin/crud-file-server"
readme = "README.md"
license = "MIT"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
tide = "0.16"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
surf = "2"
